Got rid of line and fixed spacing

--- a/ui/style.css
+++ b/ui/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .subtitle {
-  width: 178px;
+  width: 201px;
   margin: auto;
 }
 
